stylesheets/application.css
/* ... */
#sidebar {
	background: #fff;
	width: 22%; /* Resize-Fix */
	margin: 0 1% 0 0; /* Resize-Fix */
	border: 1px solid #C7640C;
	-moz-border-radius-topleft: 3px; -webkit-border-top-left-radius: 3px;
	-moz-border-radius-topright: 3px; -webkit-border-top-right-radius: 3px;
	-moz-border-radius-bottomleft: 3px; -webkit-border-bottom-left-radius: 3px;
	-moz-border-radius-bottomright: 3px; -webkit-border-bottom-right-radius: 3px;
	padding: 0 1em 0.5em;
}

#footer {
	border: none;
	background: url(../img/bgfot.jpg) repeat-x 50% 0%;
	clear: left;
	color:#666666;
	font-size: 0.8em;
	padding-bottom:15px;
	text-align:left;
	margin: 8px 0 0;
	height: 104px;
	padding: 0.5em 24px;
	color: #984508;
}
#footer a:hover { background: transparent none repeat scroll 0 0; color: #984508; !important;}
#footer a:link, #footer a:visited { color: #984508; text-decoration: underline; }

p.subtitle {
	font-style:normal;
}

/* Headers */
h1, h2, h3, h4, h5, h6 { color: #000; font-family: 'Lucida Grande', 'Lucida Sans Unicode', Arial, Verdana, sans-serif; }
.wiki h1, .wiki h2, .wiki h3, .wiki h4, .wiki h5, .wiki h6 { color: #000; font-family: 'Lucida Grande', 'Lucida Sans Unicode', Arial, Verdana, sans-serif; }
h1 { color: #000; font-size: 24px; font-weight: normal; margin:0pt 0pt 0pt 0.25em; padding:0pt 0pt 10px; text-align:left; }
h2, h3, h4, .wiki h1, .wiki h2, .wiki h3 { border-bottom: 0px;}
.wiki h3 { font-size: 1.1em; }

h2, .wiki h1 {
	background-color: #FBF8F2;
	margin: 2px 0px 10px;
	padding: 10px .7em;
	font-size: 21px;
	font-weight: normal;
	font-family: 'Lucida Grande', 'Lucida Sans Unicode', Arial, Verdana, sans-serif;
	color: #000;
	border: 1px #F3ECE3 solid;
	-moz-border-radius-topleft: 3px; -webkit-border-top-left-radius: 3px;
	-moz-border-radius-topright: 3px; -webkit-border-top-right-radius: 3px;
	-moz-border-radius-bottomleft: 3px; -webkit-border-bottom-left-radius: 3px;
	-moz-border-radius-bottomright: 3px; -webkit-border-bottom-right-radius: 3px;
}
.wiki h2 { background-color: #FBF8F2; font-size:1.1em; padding: 1px 5px; }
h2 img { vertical-align: middle; } /* Align the Username and the image - for example under /users/ID */
h3, h4 { font-weight: normal; color: #000;}

#sidebar h3 { color: #000; border-bottom:1px solid #989898; padding:6px 0; }

/* Links */
#sidebar a:hover { color: #F5AF77; text-decoration: none;}


/* Menu */
#main-menu { margin: 0 18.5px; margin-bottom: -1px; z-index:9999;} /* Resize-Fix: z-index */
#main-menu li a { font-weight: normal; padding:6px 8px 8px; }
#main-menu li a:hover {
	color: #000;
	background: transparent;
	text-decoration: none;
}
#main-menu li a.selected, #main-menu li a.selected:hover {
	background-color:#fff;
	color: #111;
	border: 1px solid #C7640C;
	-moz-border-radius-topleft: .3em; -webkit-border-top-left-radius: .3em;
	-moz-border-radius-topright: .3em; -webkit-border-top-right-radius: .3em;
	border-bottom: none;
}

/* TODO: Done the lines above. Need to review the lines below.
   Done and changed by LukyLuke
*/

/* LukyLuke: Different things added */
#history .journal { padding: 5px; margin: 0 0 10px; }
.reply h4, #history .journal h4 { margin:0; padding:0; font-weight: bold; border-bottom:1px solid #989898; }
#history .journal h4 { margin: 3px 1px 5px 0px; padding: 0 5px 5px; }
blockquote { background: #FFF7EA; padding: 5px; font-size: 0.95em; }
blockquote p { padding: 0; margin: 5px 0; }
div.issue { background: #FFF7EA; border-radius: 0.3em; }
tr.parent.open { font-weight: bold; background-color: inherited; } /* an invalid background-color should use the parent one */
tr.parent.open span.expander, tr.parent span.expander, tr span.expander { background-repeat: no-repeat; background-position: center center; }
table.list tbody tr:hover { background-color:#FBF8F2; }
td.checkbox { padding: 8px 0 0 0; vertical-align: top; }
table.list tbody tr.group td { border-bottom: 2px solid #999; padding: 1.3em 0 0 0.3em; }
.wiki a.tag_level5 { font-size: 1.1em; padding-right: 0.6em; }

/* Settings menu */
#content .tabs ul li a {
	font-weight: normal;
	font-size: .9em;
	border-top: 1px #fff solid;
	border-right: 1px #fff solid;
	border-left: 1px #fff solid;
	background: #fff;
	-moz-border-radius-topleft: .3em; -webkit-border-top-left-radius: .3em;
	-moz-border-radius-topright: .3em; -webkit-border-top-right-radius: .3em;
}

#content .tabs ul li a:hover {
	background: #fff;
	color: #FFA500;
}

#content .tabs ul li a.selected {
	font-weight: normal;
	color:#455138;
	-moz-border-radius-topleft: .3em; -webkit-border-top-left-radius: .3em;
	-moz-border-radius-topright: .3em; -webkit-border-top-right-radius: .3em;
}
.context-menu-selection, .context-menu-selection:hover { background-color: #F5ECD6 !important; }
.context-menu-selection, .context-menu-selection:hover, .context-menu-selection a, .context-menu-selection a:hover { color: #000 !important; }

/* Tables */
table.list { border: none; }
table.list th { background-color: #F5ECD6; }
table.list tbody td, table.list tbody tr td { border-bottom: solid 1px #ddd; padding:4px 10px 4px 3px; }
table.list thead th {
	border: none;
	border-bottom:1px solid #999999;
	font-size:9px;
	font-weight: bold;
	padding:3px;
	text-transform:uppercase;
}

table.list thead th a { color: #2e2e2e; }
table.list thead th a:hover { color: #2e2e2e; }
table.list tr.odd { background-color: transparent; }
table.list tr.even { background-color: #FFF7EA; }

/* Issues grid styles by priorities (provided by Wynn Netherland) */
table.list tr.issue a { color: #3c3c3c; }

tr.odd.priority-5, table.list tbody tr.odd.priority-5:hover { color: #900; font-weight: bold; }
tr.odd.priority-5 { background: #ffc4c4; }
tr.even.priority-5, table.list tbody tr.even.priority-5:hover { color: #900; font-weight: bold; }
tr.even.priority-5 { background: #ffd4d4; }
tr.priority-5 a, tr.priority-5:hover a { color: #900; }
tr.odd.priority-5 td, tr.even.priority-5 td { border-color: #ffb4b4; }

tr.odd.priority-4, table.list tbody tr.odd.priority-4:hover { color: #900; }
/* ... */

